# wtcombot

./: .dockerignore  .gitignore  Dockerfile  README.md  WT_COMBOT_ENVFILE.env  app.py  docker-compose.yml  pyproject.toml  wtcombot.py
wtcombot/: main.py  tgbot.py  wabot.py  wtcombot.py  wterror.py
